# C-Programming-Groupwork

./: CMakeLists.txt
app/: CMakeLists.txt  main.c
app/include/: color.h  menu.h  operation.h
app/src/: color.c  main.c  menu.c  operation.c
include/: args.h  array.h  config.h  logger.h  order.h  order_array.h  order_struct.h  tools.h
src/: args.c  array.c  config.c  logger.c  main.c  order.c  order_array.c  order_struct.c  tools.c  unit_test.cpp
test/: main.cpp  unit_test.cpp
